fix overflow scroll

--- a/src/styles/components/app.scss
+++ b/src/styles/components/app.scss
@@ -13,7 +13,6 @@
 .app__inner-wrapper {
   width: 100%;
   height: calc(100% - 30px);
-  overflow-x: scroll;
+  overflow-y: auto;
   -webkit-overflow-scrolling: touch;
-
 }
